--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Low Birthrate Datavis</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
@@ -160,19 +160,19 @@
       
     </div>
 
-    <script src="js/main.js"></script>
-    <script src="js/population.js"></script>
-    <script src="js/birthrate.js"></script>
-    <script src="js/avg_house_selling_price.js"></script>
-    <script src="js/members.js"></script>
-    <script src="js/marriage_rate.js"></script>
-    <script src="js/privateEducation_vs_grade.js"></script>
-    <script src="js/privateEducation_vs_region.js"></script>
-    <script src="js/inflation_rate.js"></script>
-    <script src="js/birthrate_map.js"></script>
-    <script src="js/employment.js"></script>
-    <script src="js/workinghours.js"></script>
-    <script src="js/parental_leave.js"></script>
-    <script src="js/policies.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/population.js"></script>
+    <script src="./js/birthrate.js"></script>
+    <script src="./js/avg_house_selling_price.js"></script>
+    <script src="./js/members.js"></script>
+    <script src="./js/marriage_rate.js"></script>
+    <script src="./js/privateEducation_vs_grade.js"></script>
+    <script src="./js/privateEducation_vs_region.js"></script>
+    <script src="./js/inflation_rate.js"></script>
+    <script src="./js/birthrate_map.js"></script>
+    <script src="./js/employment.js"></script>
+    <script src="./js/workinghours.js"></script>
+    <script src="./js/parental_leave.js"></script>
+    <script src="./js/policies.js"></script>
 </body>
 </html>
